<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="leak_canary_test_class_name" translatable="false">assertk.Assert</string>
    <string name="app_name" translatable="false">AutoJs6</string>
    <string name="app_name_qq" translatable="false">QQ</string>
    <string name="color_library_identifier_android_colors" translatable="false">Android</string>
    <string name="color_library_identifier_css_colors" translatable="false">CSS</string>
    <string name="color_library_identifier_web_colors" translatable="false">WEB</string>
    <string name="com_twofortyfouram_log_tag" tools:ignore="ResourceName" translatable="false" />
    <string name="default_build_apk_version_code" translatable="false">1</string>
    <string name="default_build_apk_version_name" translatable="false">1.0.0</string>
    <string name="default_key_app_language" translatable="false">@string/key_app_language_auto</string>
    <string name="default_key_documentation_source" translatable="false">@string/key_documentation_source_local</string>
    <string name="default_key_editor_pinch_to_zoom_strategy" translatable="false">@string/key_editor_pinch_to_zoom_change_text_size</string>
    <string name="default_key_file_extensions" translatable="false">@string/key_file_extensions_show_all_but_executable</string>
    <string name="default_key_hidden_files" translatable="false">@string/key_hidden_files_not_show</string>
    <string name="default_key_keep_screen_on_when_in_foreground" translatable="false">@string/key_keep_screen_on_when_in_foreground_disabled</string>
    <string name="default_key_launcher_icon" translatable="false">@string/key_launcher_icon_adaptive</string>
    <string name="default_key_night_mode" translatable="false">@string/key_night_mode_follow_system</string>
    <string name="default_key_restart_strategy" translatable="false">@string/key_restart_strategy_quick</string>
    <string name="default_key_root_mode" translatable="false">@string/key_root_mode_auto_detect</string>
    <string name="default_key_root_record_out_file_type" translatable="false">@string/key_root_record_out_file_type_binary</string>
    <string name="default_key_scheduled_restart_backend" translatable="false">@string/key_scheduled_restart_backend_work_manager</string>
    <string name="default_key_timed_task_backend" translatable="false">@string/key_timed_task_backend_alarm</string>
    <string name="default_main_file_name" translatable="false">main.js</string>
    <string name="developer_full_name" translatable="false">SuperMonster003</string>
    <string name="developer_nickname" translatable="false">SuperMonster003</string>
    <string name="ellipsis_six" translatable="false" tools:ignore="TypographyEllipsis">... ...</string>
    <string name="ellipsis_three" translatable="false" tools:ignore="TypographyEllipsis">...</string>
    <string name="email" translatable="false">hybbbb1996@gmail.com</string>
    <string name="entry_app_language_ar" translatable="false">العربية</string>
    <string name="entry_app_language_en" translatable="false">English</string>
    <string name="entry_app_language_es" translatable="false">Español</string>
    <string name="entry_app_language_fr" translatable="false">Français</string>
    <string name="entry_app_language_ja" translatable="false">日本語</string>
    <string name="entry_app_language_ko" translatable="false">한국어</string>
    <string name="entry_app_language_ru" translatable="false">Русский</string>
    <string name="entry_app_language_zh_hans" translatable="false">简体中文</string>
    <string name="entry_app_language_zh_hant_hk" translatable="false">繁體中文 (香港)</string>
    <string name="entry_app_language_zh_hant_tw" translatable="false">繁體中文 (台灣)</string>
    <string name="format_default_package_name" formatted="true" translatable="false">org.autojs.autojs6.%s</string>
    <string name="format_dialog_progress_number_format_kilo_bytes" translatable="false">%.1fKiB/%.1fKiB</string>
    <string name="format_dialog_progress_number_format_mega_bytes" translatable="false">%.2fMiB/%.2fMiB</string>
    <string name="id_launcher_shortcut_docs" translatable="false">shortcut_$_docs</string>
    <string name="id_launcher_shortcut_log" translatable="false">shortcut_$_log</string>
    <string name="id_launcher_shortcut_plugin_center" translatable="false">shortcut_$_plugin_center</string>
    <string name="id_launcher_shortcut_settings" translatable="false">shortcut_$_settings</string>
    <string name="key_a11y_service" translatable="false">key_$_a11y_service</string>
    <string name="key_about_app_and_developer" translatable="false">key_$_about_app_and_developer</string>
    <string name="key_about_app_tips" translatable="false">key_$_about_app_tips</string>
    <string name="key_all_files_access" translatable="false">key_$_all_files_access</string>
    <string name="key_app_language" translatable="false">key_$_app_language</string>
    <string name="key_app_language_ar" translatable="false">key_$_app_language_ar</string>
    <string name="key_app_language_auto" translatable="false">key_$_app_language_auto</string>
    <string name="key_app_language_en" translatable="false">key_$_app_language_en</string>
    <string name="key_app_language_es" translatable="false">key_$_app_language_es</string>
    <string name="key_app_language_fr" translatable="false">key_$_app_language_fr</string>
    <string name="key_app_language_ja" translatable="false">key_$_app_language_ja</string>
    <string name="key_app_language_ko" translatable="false">key_$_app_language_ko</string>
    <string name="key_app_language_ru" translatable="false">key_$_app_language_ru</string>
    <string name="key_app_language_zh_hans" translatable="false">key_$_app_language_zh</string>
    <string name="key_app_language_zh_hant_hk" translatable="false">key_$_app_language_zh_hk</string>
    <string name="key_app_language_zh_hant_tw" translatable="false">key_$_app_language_zh_tw</string>
    <string name="key_auto_check_for_updates" translatable="false">key_$_auto_check_for_updates</string>
    <string name="key_auto_night_mode_enabled" translatable="false">key_$_auto_night_mode_enabled</string>
    <string name="key_change_working_dir" translatable="false">key_$_change_working_dir</string>
    <string name="key_check_for_updates" translatable="false">key_$_check_for_updates</string>
    <string name="key_check_for_updates_while_ignoring_the_local_version" translatable="false">key_$_check_for_updates_while_ignoring_the_local_version</string>
    <string name="key_client_socket_normally_closed" translatable="false">key_$_client_socket_normally_closed</string>
    <string name="key_color_select_activity_legacy_layout" translatable="false">key_$_color_select_activity_legacy_layout</string>
    <string name="key_delete_permanently_also_clear_history" translatable="false">key_$_delete_permanently_also_clear_history</string>
    <string name="key_dialog_check_display_over_other_apps" translatable="false">key_$_dialog_check_display_over_other_apps</string>
    <string name="key_dialog_foreground_svc" translatable="false">key_$_dialog_foreground_svc</string>
    <string name="key_dialog_log_entries_exported" translatable="false">key_$_dialog_log_entries_exported</string>
    <string name="key_dialog_manage_all_files_permission" translatable="false">key_$_dialog_manage_all_files_permission</string>
    <string name="key_dialog_num_of_log_entries_exceeds_limit_for_sending" translatable="false">key_$_num_of_log_entries_exceeds_limit_for_sending</string>
    <string name="key_dialog_selected_abi_is_unavailable" translatable="false">key_$_dialog_selected_abi_is_unavailable</string>
    <string name="key_dialog_transparent_background_launcher_icon" translatable="false">key_$_dialog_transparent_background_launcher_icon</string>
    <string name="key_display_over_other_apps" translatable="false">key_$_display_over_other_apps</string>
    <string name="key_documentation_source" translatable="false">key_$_documentation_source</string>
    <string name="key_documentation_source_local" translatable="false">key_$_documentation_source_local</string>
    <string name="key_documentation_source_online" translatable="false">key_$_documentation_source_online</string>
    <string name="key_drafts_max_days" translatable="false">key_$_drafts_max_days</string>
    <string name="key_drafts_max_total_bytes" translatable="false">key_$_drafts_max_total_bytes</string>
    <string name="key_editor_pinch_to_zoom_change_text_size" translatable="false">key_$_editor_pinch_to_zoom_change_text_size</string>
    <string name="key_editor_pinch_to_zoom_disable" translatable="false">key_$_editor_pinch_to_zoom_disable</string>
    <string name="key_editor_pinch_to_zoom_scale_view" translatable="false">key_$_editor_pinch_to_zoom_scale_view</string>
    <string name="key_editor_pinch_to_zoom_strategy" translatable="false">key_$_editor_pinch_to_zoom_strategy</string>
    <string name="key_editor_text_size" translatable="false">key_$_editor_text_size</string>
    <string name="key_editor_theme" translatable="false">key_$_editor_theme</string>
    <string name="key_enable_a11y_service_with_root_access" translatable="false">key_$_enable_a11y_service_with_root_access</string>
    <string name="key_enable_a11y_service_with_secure_settings" translatable="false">key_$_enable_a11y_service_with_secure_settings</string>
    <string name="key_enable_observe_key" translatable="false">key_$_enable_observe_key</string>
    <string name="key_explorer_file_default_prefix" translatable="false">key_$_explorer_file_default_prefix</string>
    <string name="key_extending_js_build_in_objects" translatable="false">key_$_extending_js_build_in_objects</string>
    <string name="key_file_extensions" translatable="false">key_$_file_extensions</string>
    <string name="key_file_extensions_not_show" translatable="false">key_$_file_extensions_not_show</string>
    <string name="key_file_extensions_show_all" translatable="false">key_$_file_extensions_show_all</string>
    <string name="key_file_extensions_show_all_but_executable" translatable="false">key_$_file_extensions_show_all_but_executable</string>
    <string name="key_floating_menu_shown" translatable="false">key_$_floating_menu_shown</string>
    <string name="key_foreground_service" translatable="false">key_$_foreground_service</string>
    <string name="key_gesture_observing" translatable="false">key_$_gesture_observing</string>
    <string name="key_guard_mode" translatable="false">key_$_guard_mode</string>
    <string name="text_save">Save</string>
    <string name="text_ai_enable_assistant">Enable AI script assistant</string>
    <string name="text_ai_manage_providers">Manage providers</string>
    <string name="text_ai_test_default_provider">Test default provider</string>
    <string name="text_ai_context_options">Context options</string>
    <string name="text_ai_allow_full_file_context">Allow sending current file context</string>
    <string name="text_ai_allow_project_structure">Allow sending project structure</string>
    <string name="text_ai_allow_recent_logs">Allow sending recent run errors and logs</string>
    <string name="text_ai_allow_clipboard_context">Allow sending clipboard text after confirmation</string>
    <string name="text_ai_allow_ui_snapshot_context">Allow sending UI snapshot summaries after confirmation</string>
    <string name="text_ai_allow_screen_capture_context">Allow sending screenshot summaries after confirmation</string>
    <string name="text_ai_allow_ocr_context">Allow sending OCR result summaries after confirmation</string>
    <string name="text_ai_high_risk_confirmation">Require second confirmation for risky code</string>
    <string name="text_ai_max_context_chars">Max context characters</string>
    <string name="text_ai_max_log_chars">Max log characters</string>
    <string name="text_ai_clear_cache">Clear AI cache</string>
</resources>